// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`poll title should match snapshot (default) 1`] = `""`;

exports[`poll title should match snapshot (form) 1`] = `
<div
  className="u-align-center"
>
  <input
    className="c-poll-display__input qa-title-input u-margin-half"
    maxLength="100"
    onChange={[Function]}
    placeholder="Untitled"
  />
  <h4>
    By Anonymous
  </h4>
</div>
`;

exports[`poll title should match snapshot (form, author) 1`] = `
<div
  className="u-align-center"
>
  <input
    className="c-poll-display__input qa-title-input u-margin-half"
    maxLength="100"
    onChange={[Function]}
    placeholder="Untitled"
  />
  <h4>
    By Author A
  </h4>
</div>
`;

exports[`poll title should match snapshot (form, title) 1`] = `
<div
  className="u-align-center"
>
  <input
    className="c-poll-display__input qa-title-input u-margin-half"
    maxLength="100"
    onChange={[Function]}
    placeholder="Untitled"
    value="Title A"
  />
  <h4>
    By Anonymous
  </h4>
</div>
`;

exports[`poll title should match snapshot (view) 1`] = `
<div
  className="u-align-center"
>
  <h3
    className="u-margin-half"
  >
    Untitled
  </h3>
  <h4>
    By Anonymous
  </h4>
</div>
`;

exports[`poll title should match snapshot (view, author) 1`] = `
<div
  className="u-align-center"
>
  <h3
    className="u-margin-half"
  >
    Untitled
  </h3>
  <h4>
    By Author A
  </h4>
</div>
`;

exports[`poll title should match snapshot (view, title) 1`] = `
<div
  className="u-align-center"
>
  <h3
    className="u-margin-half"
  >
    Title A
  </h3>
  <h4>
    By Anonymous
  </h4>
</div>
`;
